fixed navbar color contrast

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -76,7 +76,7 @@
 
 .fa:hover,
 .navbar a:hover {
-  color: var(--navbar-color);
+  color: var(--secondary-color);
 }
 
 .navbar img {
